# Gravitas

./: .gitignore  CMakeLists.txt  README.md  SIGNAL_FLOW.md
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: CircularBuffer.cpp  CircularBuffer.h  StutterEngine.cpp  StutterEngine.h
Source/Physics/: BallPhysics.cpp  BallPhysics.h  PlanetPresets.h
